# Parlay

./: README.md  alembic.ini  pyproject.toml  инструкция API.txt
alembic/: env.py
alembic/versions/: 0001_init.py  0002_reading_partitions.py  0003_ui_config.py  0004_par_dli.py  0005_par_dli_refactor.py  0006_auth_users_audit.py  0007_source_bindings.py  0008_line_power_config.py  0009_par_dli_dli_first_mode.py  0010_par_dli_legacy_fields_nullable.py
app/: main.py  main_runtime.py  metrics.py  metrics_auto.py  metrics_par_dli.py  metrics_priva.py  runtime.py  runtime_limiter.py  settings.py
app/api/: auth.py  deps.py  health.py  metrics.py
app/api/v1/: routes_auth.py  routes_cabinets.py  routes_commands.py  routes_health_detail.py  routes_health_grid.py  routes_parameters.py  routes_power.py  routes_query.py  routes_readings.py  routes_schedules.py  routes_ui.py  (+19 more)
app/db/: auth_crud.py  auto_crud.py  base.py  crud.py  crud_query.py  models.py  models_all.py  models_power.py  models_sources.py  models_ui.py  par_dli_crud.py  partitioning.py  power_crud.py  priva_crud.py  schedule_crud.py  session.py  source_crud.py  ui_command_crud.py  ui_compute.py  ui_crud.py  ui_snapshot_crud.py  ui_state_crud.py
app/mqtt/: client.py  parser.py
app/services/: audit.py  auto_engine.py  bind_resolver.py  command_service.py  excel_export.py  ingest_service.py  par_dli_engine.py  par_dli_engine_v2.py  priva_engine.py  query_service.py  rate_limiter.py  security.py
app/sse/: hub.py
scripts/: create_user.py  gen_topics.py  print_routes.py  reset_db.py  topics.csv  topics.txt
