[project]
name = "mqtt-bridge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "paho-mqtt>=2.1",
  "orjson>=3.9",
  "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 110
